[package]
name = "kss-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4"
actix-rt = "2"
actix-cors = "0.6.4"
mongodb = { version = "2.7.1", features = ["bson-chrono-0_4", "zlib-compression"]}
serde = { version = "1.*", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.10.1"
log = "0.4.20"